# just_audio_aurora

./: .gdbinit  .gitignore  .metadata  LICENSE  README.md  pubspec.yaml
aurora/: CMakeLists.txt  just_audio_aurora.cpp  just_audio_aurora_plugin.cpp
aurora/include/just_audio_aurora/: globals.h  just_audio_aurora.h  just_audio_aurora_plugin.h
aurora/player/: just_audio_aurora_player.h
example/: pubspec.yaml
example/aurora/: main.cpp
example/aurora/desktop/: com.example.example.desktop
example/aurora/rpm/: com.example.example.spec
example/lib/: main.dart
example/my_example/: README.md  pubspec.yaml
example/my_example/aurora/: CMakeLists.txt
example/my_example/aurora/desktop/: com.example.my_example.desktop
example/my_example/aurora/rpm/: com.example.my_example.spec
example/my_example/lib/: main.dart
example/my_example/test/: widget_test.dart
example1/: .metadata  pubspec.yaml
example1/aurora/: CMakeLists.txt
example1/aurora/desktop/: com.example.example1.desktop
example1/aurora/rpm/: com.example.example1.spec
example1/lib/: main.dart  soundcloud_api.dart  soundcloud_track.dart  soundcloud_track.g.dart
lib/: just_audio_aurora.dart  just_audio_aurora_platform.dart
